crates/aranya-policy-compiler/tests/data/scoping/map_var_after_not_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: a thing being referenced is not in scope
  |
4 |     check p == None else test_fail("check failed")
  |           ^ 'p' not in scope
